chore(deploy): configure production deployment and environment variables

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <!-- Favicon inicial, se actualizará dinámicamente -->
-    <link rel="icon" href="/src/assets/logo.png" />
+
+    <!-- Básico -->
+    <title>Rentus | Gestión de Alquileres Inteligente</title>
+    <meta
+      name="description"
+      content="Rentus es una plataforma moderna para gestionar alquileres, propiedades e inquilinos de forma simple y rápida."
+    />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Rentus" />
+    <meta property="og:description" content="Gestiona tus alquileres, propiedades e inquilinos desde un solo lugar." />
+    <meta property="og:image" content="https://rentusco.com/og-image.png" />
+    <meta property="og:url" content="https://rentusco.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rentus" />
+    <meta name="twitter:description" content="Plataforma moderna para la gestión de alquileres." />
+    <meta name="twitter:image" content="https://rentusco.com/og-image.png" />
+
+    <!-- Obligatorio Vite -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <link rel="icon" href="/src/assets/logo-white.png" />
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
