refactor: restructure and clean up entire frontend codebase

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Obligatorio Vite -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/src/assets/logo-white.png" />
+    <link rel="icon" href="/favicon-dark.png" />
   </head>
 
   <body>
